...
    }
    
    // MARK: - Set Basic
    private func setBasicAttributes() {
        view = homeView
        title = "EndYourDay"
        let addFeedBarButton = UIBarButtonItem(image: UIImage(systemName: "plus"),
                                                            style: .plain,
                                                            target: self,
                                                            action: #selector(bringUpAddFeedView))
        addFeedBarButton.accessibilityIdentifier = "plus"
        navigationItem.rightBarButtonItem = addFeedBarButton
    }
...
