...
        view = addFeedView
        
        let closeBarButtonItem = UIBarButtonItem(image: UIImage(systemName: "xmark"),
                                                           style: .plain,
                                                           target: self,
                                                           action: #selector(poptoMain))
        let shareBarButtonItem = UIBarButtonItem(title: "공유",
                                                            style: .plain,
                                                            target: self,
                                                            action: #selector(uploadFeed))
        shareBarButtonItem.accessibilityIdentifier = "공유"
        
        navigationItem.leftBarButtonItem = closeBarButtonItem
...
